--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,26 @@
 <div id="content" class="col-lg-10 offset-lg-1">
-  <header id="header" class="col-lg-12">
+  <header id="header" class="col-lg-12" [style.background]="headerColor">
     <h1>{{title}}</h1>
   </header>
   <nav id="nav" class="col-lg-12">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Productos</a></li>
-      <li><a href="#">Crear productos</a></li>
+      <li>
+        <a [routerLink]="['/']"
+           [routerLinkActive]="['activado']"
+           [routerLinkActiveOptions]="{exact: true}">
+          Home
+        </a>
+      </li>
+      <li>
+        <a routerLink="/productos" [routerLinkActive]="['activado']">
+          Productos
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Crear productos
+        </a>
+      </li>
     </ul>
   </nav>
   <section id="main" class="col-lg-12">
