--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li>
-        <a routerLink="/productos" [routerLinkActive]="['activado']">
+        <a [routerLink]="['/productos']" [routerLinkActive]="['activado']">
           Productos
         </a>
       </li>
