implementing create product and list product unig the api backend implementing services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a [routerLink]="['crear-producto']" [routerLinkActive]="['activado']">
           Crear productos
         </a>
       </li>
