--- a/src/app/productos-list/productos-list.component.html
+++ b/src/app/productos-list/productos-list.component.html
@@ -5,10 +5,25 @@
   Cargando listado de productos...
 </div>
 <div *ngIf="productos">
-  <ul>
-    <li *ngFor="let producto of productos">
-      <strong>{{producto.nombre}}</strong>
-      <p>{{producto.precio}}</p>
-    </li>
-  </ul>
+  <div class="row">
+    <div class="col-lg-3" *ngFor="let producto of productos">
+      <div class="img-thumbnail">
+        <div *ngIf="producto.imagen" class="imagen-container">
+          <img src="http://localhost/curso-angular-backend/uploads/{{producto.imagen}}" class="producto-imagen" alt="">
+        </div>
+        <div *ngIf="!producto.imagen">
+          <div class="img-relleno"></div>
+        </div>
+        <div class="figure-caption">
+          <h3>{{producto.nombre}}</h3>
+          <p>{{producto.precio}}$</p>
+          <p>
+            <a [routerLink]="['/producto', producto.id]"  class="btn btn-info">Ver</a>
+            <a [routerLink]="['/editar-producto', producto.id]" class="btn btn-warning">Editar</a>
+            <a href="#" class="btn btn-danger">Borrar</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
